fix(delivery): fix code review issues