@@ -1,13 +1,15 @@
 package com.wms.delivery.service;
 
+import com.wms.common.exception.BusinessRuleException;
+import com.wms.common.exception.EntityNotFoundException;
 import com.wms.delivery.dto.delivery.DeliveryRequestItemResponse;
 import com.wms.delivery.dto.delivery.PickItemRequest;
 import com.wms.delivery.entity.DeliveryRequestItem;
 import com.wms.delivery.repository.DeliveryRequestItemRepository;
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,11 +26,12 @@ public class DeliveryRequestItemService {
     DeliveryRequestItem item =
         itemRepository
             .findByDeliveryRequestIdAndGoodsItemId(deliveryRequestId, request.goodsItemId())
-            .orElseThrow(() -> new RuntimeException("Item not found in this delivery request"));
+            .orElseThrow(
+                () -> new EntityNotFoundException("DeliveryRequestItem", request.goodsItemId()));
 
-    int newPickedQty = item.getPickedQty() + request.pickedQty();
-    if (newPickedQty > item.getRequestedQty()) {
-      throw new RuntimeException("Picked quantity exceeds requested quantity");
+    BigDecimal newPickedQty = item.getPickedQty().add(request.pickedQty());
+    if (newPickedQty.compareTo(item.getRequestedQty()) > 0) {
+      throw new BusinessRuleException("Picked quantity exceeds requested quantity");
     }
 
     item.setPickedQty(newPickedQty);
@@ -44,13 +47,6 @@ public class DeliveryRequestItemService {
   public List<DeliveryRequestItemResponse> listItems(UUID deliveryRequestId) {
     return itemRepository.findByDeliveryRequestId(deliveryRequestId).stream()
         .map(DeliveryRequestItemResponse::from)
-        .collect(Collectors.toList());
-  }
-
-  @Transactional(readOnly = true)
-  public List<DeliveryRequestItemResponse> listItemsByGoodsItem(UUID goodsItemId) {
-    return itemRepository.findByGoodsItemId(goodsItemId).stream()
-        .map(DeliveryRequestItemResponse::from)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
